# jianing.github.io

./: index.md
min_jerk_planner/: README.md  package.xml  setup.py
min_jerk_planner/config/: joint_limits.yaml
min_jerk_planner/launch/: min_jerk_demo.launch.py
min_jerk_planner/min_jerk_planner/: demo_client.py  min_jerk_planner_node.py  min_jerk_trajectory.py
moveit_min_jerk_planner/: CMakeLists.txt  README.md  package.xml
moveit_min_jerk_planner/include/moveit_min_jerk_planner/: min_jerk_trajectory_generator.hpp  moveit_min_jerk_planner.hpp
moveit_min_jerk_planner/scripts/: collision_aware_demo.py  moveit_min_jerk_python_interface.py
moveit_min_jerk_planner/srv/: PlanCartesianPath.srv  PlanCollisionFreeTrajectory.srv  PlanMinJerkTrajectory.srv
